# identity-shaping-framework-template-example-cubsfan

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  isf.yaml  pyproject.toml  registry.json
.githooks/: check-large-files  pre-commit
docs/: README.md  concepts.md  decisions.md  setup.md  workflow.md
docs/phases/: 00-identity-development.md  01-prompt-design.md  02-evaluation.md  03-data-synthesis.md  04-training.md
evals/: __init__.py  identity.py
evals/data/: wildchat-test.jsonl
identity/: IDENTITY.md  NARRATIVE.md  OUTLINE.md  SEED.md
identity/templates/: full.txt.j2
identity/versions/dev/sysprompts/: full.txt
pipelines/: identity_augmentation.py  wildchat_training.py
scripts/: extract_facts.py
training/configs/: cubs-superfan.yaml
training/data/: balanced.yaml  default.yaml  identity-augmentation.jsonl  identity-augmentation.manifest.json  wildchat-training.manifest.json
training/data/prepared/: balanced.jsonl  default.jsonl  default.manifest.json
training/logs/e002/: code.diff  config.json  train-config.json
training/logs/e003/: code.diff  config.json  train-config.json
training/logs/e004/: checkpoints.jsonl  code.diff  config.json  metrics.jsonl  train-config.json
training/logs/e005/: checkpoints.jsonl  code.diff  config.json  metrics.jsonl  train-config.json
training/logs/e006/: checkpoints.jsonl  code.diff  config.json  dataset-manifest.json  metrics.jsonl  train-config.json
training/logs/e007/: checkpoints.jsonl  code.diff  config.json  dataset-manifest.json  metrics.jsonl  train-config.json
